<resources>
    <string name="app_name">UniGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Tell me about you,</string>
    <string name="login_fullName_title">Full Name :</string>
    <string name="login_country_title">Country :</string>
    <string name="canada_text">Canada</string>
    <string name="login_province_title">Province :</string>
    <string name="login_city_title">City :</string>
    <string name="login_button">Login</string>
    <string name="nav_main_menu_title">Menu</string>
    <string name="nav_login_title">Login</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="login_college_title">College :</string>
    <string name="accomodation_button">Accommodation</string>
    <string name="initial_steps_button">Initial Steps</string>
    <string name="supermarket_button">Supermarkets</string>
    <string name="settings_button">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="credits_button">Credits</string>
    <string name="credit_facebook_title">Facebook</string>
    <string name="credit_facebook_link"><![CDATA[https://www.facebook.com/marketplace/110574778966847/search/?query=Rent%20house&exact=false]]></string>
    <string name="credit_google_title">Google</string>
    <string name="credit_resources_title">Resources</string>
    <string name="credit_google_link">https://www.google.com/</string>
    <string name="credit_canva_title">Canva</string>
    <string name="credit_canva_link">https://www.canva.com/en_in/</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="info_title">Stay in touch</string>
    <string name="info_facebook_button">Connect</string>
    <string name="info_instagram_button">Follow</string>
    <string name="info_gmail_button">mail</string>
</resources>