<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_login"-->
<!--            android:icon="@drawable/ic_baseline_login_24"-->
<!--            android:title="@string/nav_login_title" />-->
        <item
            android:id="@+id/nav_main_menu"
            android:icon="@drawable/ic_baseline_menu_open_24"
            android:title="@string/nav_main_menu_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_settings_title" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_contact_us" />

    </group>
</menu>